<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="35dp"
    android:background="@color/cardview_dark_background"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/filter_title"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#FFF"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/filterTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/consoles_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/consoles_str"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />

    <Spinner
        android:id="@+id/consoles_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/consoles"
        app:layout_constraintLeft_toRightOf="@id/consoles_textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:textColor="#FFF"
        android:textSize="15sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/genre_stuff_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/consoles_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/genre_stuff_str"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>