<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".UserActivity">

    <com.google.android.material.imageview.ShapeableImageView

        android:id="@+id/user_header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/gradient_game_prf"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:translationZ="100dp"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/user_header" />

    <Button
        android:id="@+id/user_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="6dp"
        android:translationZ="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goBack"
        android:background="@drawable/ic_back"
        android:paddingLeft="12dp"
        android:paddingRight="6dp"
        tools:ignore="VectorDrawableCompat"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/ic_cross"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:paddingStart="6dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingLeft="6dp"
        android:paddingRight="12dp"
        android:translationZ="110dp"
        android:elevation="10dp"
        android:layout_marginEnd="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:translationZ="100dp"
        android:elevation="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/user_arrow"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingLeft="12dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="#FFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintTop_toBottomOf="@id/user_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_fav"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_favorites_checked"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/button_wish"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_wishlist_checked"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_fav"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/favorite_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/favorite_text"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/button_fav"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <TextView
        android:id="@+id/wish_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/wish_text"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/button_wish"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_txt" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_btn"
        android:textColor="@color/cardview_dark_background"
        android:layout_marginBottom="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>