<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
    android:background="@color/cardview_dark_background">

        <Button
            android:id="@+id/arrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="6dp"
            android:translationZ="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="goBack"
            android:background="@drawable/ic_back"
            android:paddingLeft="12dp"
            android:paddingRight="6dp"
            tools:ignore="VectorDrawableCompat"
            android:elevation="10dp"/>

        <ToggleButton
            android:id="@+id/wish"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="12dp"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="6dp"
            android:paddingRight="12dp"
            android:textOff=""
            android:textOn=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/favorite"
            android:background="@drawable/ic_wishlist"
            android:translationZ="110dp"
            android:elevation="10dp"/>

        <ToggleButton
            android:id="@+id/favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_favorites"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingLeft="6dp"
            android:paddingRight="12dp"
            android:translationZ="110dp"
            android:elevation="10dp"
            android:textOff=""
            android:textOn=""
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:translationZ="100dp"
            android:elevation="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/arrow"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingLeft="12dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:text="Game title"
            android:scaleType="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#FFF"
            android:textSize="36sp"
            android:textStyle="bold"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
             />

<!--        <com.google.android.material.imageview.ShapeableImageView
app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" -->

        <com.google.android.material.imageview.ShapeableImageView

            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/gradient_game_prf"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_marginBottom="20dp"
            android:scaleType="center"
            android:translationZ="100dp"
            android:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

<!--        <com.skydoves.androidribbon.RibbonRecyclerView-->
<!--            android:id="@+id/ribbonRecyclerView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            app:bindPokemonTypes="@{vm.pokemonInfoLiveData.types}"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/name"-->
<!--            app:ribbon_recycler_orientation="horizontal"-->
<!--            app:singleLine="false"-->
<!--            tools:listitem="@layout/item_ribbon"-->
<!--            tools:ignore="MissingClass" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="rating"
            android:textColor="#000"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/release_date"
            android:textColor="#FFF"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            android:layout_marginLeft="32dp" />

        <ScrollView
            android:id="@+id/game_info"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_info_tv"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:text="@string/game_info"
                android:textColor="#FFF"
                android:textSize="15sp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:layout_marginLeft="32dp"
                android:scrollbars = "vertical"/>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/platformsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/platforms"
            android:textColor="#FFF"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_info"
            android:layout_marginLeft="32dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/platforms_info"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:entries="@array/consoles"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/platformsView"
            android:layout_marginLeft="32dp"
            android:scrollbars = "vertical"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/categories"
            android:textColor="#FFF"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/platforms_info"
            android:layout_marginLeft="32dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres_info"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:text="@string/game_info"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres"
            android:layout_marginLeft="32dp"
            android:scrollbars = "vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

